# Trim

./: .gitignore  CMakeLists.txt  Main.c  Makefile
Headers/: Trim.h
Sources/: CMakeLists.txt  Trim.c
docs/: Doc.html
docs/assest/: _trim_8c.html  _trim_8c__incl.map  _trim_8c__incl.md5  _trim_8c_source.html  _trim_8h.html  _trim_8h__dep__incl.map  _trim_8h__dep__incl.md5  _trim_8h__incl.map  _trim_8h__incl.md5  _trim_8h_source.html  dir_000001_000000.html  dir_692516b589a32b3bfce781ca9f6d1534.html  dir_937900b87e0c7a5fa01190c395fb83f7.html  dir_937900b87e0c7a5fa01190c395fb83f7_dep.map  dir_937900b87e0c7a5fa01190c395fb83f7_dep.md5  doxygen.css  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  graph_legend.md5  index.html  menudata.js
docs/assest/search/: all_1.js  all_2.js  defines_0.js  files_0.js  functions_0.js  searchdata.js
tests/: CMakeLists.txt  Main.c
tests/Headers/: Test_Trim.h
tests/Sources/: Test_Trim.c
